# silver

./: .gitignore  Makefile  compile_commands.json  context.fbs  readme.md  scratch.pad  silver.md  silver.vim  test.sas  test.silver-as  todo
compiler/: Cargo.toml
compiler/src/: lib.rs
examples/: core.ag  test.silver-as
include/: context_generated.h  decorator.hpp  function.hpp  instruction.hpp  model.hpp  type.hpp
iter1/: compile_commands.json
iter1/include/: lexer.hpp  parser.hpp
iter1/src/: lexer.cpp  parser.cpp
notes/: context.fbs
old/: silver.md
old/iter1/: CMakeLists.txt
old/iter1/src/: lexer.cpp  parser.cpp
old/quicksilver/: Cargo.toml  test.c  test.silver
old/sas_parser/: CMakeLists.txt  compile_commands.json
old/syntacks/: Cargo.toml
old/tmp/: Cargo.toml
parser/: Cargo.toml  ex.is  test.silver
parser/examples/: test.sas
parser/include/: function.hpp  instruction.hpp  model.hpp  type.hpp
parser/src/: delim.rs  lexer.rs  lib.rs  (+2 more)
parserx/: Cargo.toml  a.out  test.silver  test.silver.out.ll
quicksilver/: Cargo.toml  a.out  test.c  test.ll  test.silver  test1.silver
silver/: Makefile  a.out  array.c  array.silver  array.silver.out.ll  bytecode_compiler.py  c.silver  helper.c  silver.ll  silver.py  silver.silver  silver.silver.out.ll  silver.silver.out.s  sys.silver  test.silver
src/: decorator.cpp  instruction.cpp  model.cpp
tmp/: Cargo.toml  grammar
x/: Cargo.toml  a.out  array.silver  array.silver.out.ll  asm.silver  flashy.silver  string.silver  test.ll  test.silver  test.silver.out.ll  test1.silver
x/src/: main.rs
(+138 files in other folders)
